# BAP

./: .gitignore  HANDOFF_v2.md  INSTRUCTIONS.md  Makefile  README-env.md  build_yaml.py  dev_pseudoreplicate.py  dev_split_h5.py  download_ms_validation.sh  pyproject.toml  run_pipeline.sh  run_pipeline_WS.sh  run_pipeline_WS_v2.sh  sample_metadata.csv  setup-remote.sh  snRNAseq_project_summary.md
config/: brain.yaml  celltype_go_keywords.yaml  cross_species_celltype_map.yaml  dev.yaml  dev_placenta.yaml  dev_split.yaml  human_placenta_markers.yaml  placenta.yaml  placenta_compartments_block.yaml  placenta_markers.yaml  stress_pathways_8e.yaml  subcluster_markers.yaml
notes/: 08f_cross_tissue_findings_2026-06-25.md
refs/: dbgap_application_checklist.md
refs/stamp/: mousePlacenta_DEG_AllCells.xlsx  mousePlacenta_DEG_Tropho.xlsx
results_WS/brain/tables/02_qc/: summary_qc.csv
results_WS/brain/tables/07_annotation/: 07_annotation_age_composition_sanity.csv  07_annotation_celltype_by_age_long.csv  07_annotation_celltype_by_age_wide.csv  07_annotation_celltype_composition.csv  07_annotation_class_per_cluster_age.csv  07_annotation_marker_genes_per_cluster.csv  07_annotation_summary.csv
results_WS/brain/validation/: library_confound.csv  manifest_balance.csv  sample_fingerprints.csv  sex_check.csv  validation_report.txt
results_WS/placenta/tables/02_qc/: summary_qc.csv
results_WS/placenta/tables/07_annotation/: 07_annotation_celltype_by_age_long.csv  07_annotation_celltype_by_age_wide.csv  07_annotation_celltype_composition.csv  07_annotation_cluster_fractions.csv  07_annotation_cluster_summary.csv  07_annotation_marker_genes_per_cluster.csv  07_annotation_sanity_check.csv  07_annotation_summary.csv
results_WS/placenta/validation/: library_confound.csv  manifest_balance.csv  sample_fingerprints.csv  sex_check.csv  validation_report.txt
scripts/: 01_validate.py  02_ambient.py  02_qc.py  02_soupx.py  03_doublets.py  04_integration_prep.py  05_integration.py  05b_umap_sweep.py  06_clustering.py  07_annotation.py  07b_subcluster.py  07c_label_transfer.py  07d_subcluster_annotate.py  07e_celltype_counts.py  07e_subcluster_composition.py  08a_composition.py  08b_de.py  08b_de_summary.py  08b_developmental_disruption.py  08b_disruption_shuffle_test.py  08b_followup_plots.py  08c_pathways.py  08c_pathways_summary.py  08d_trajectory.py  08e_comms.py  08e_comms_summary.py  08e_communication.py  08f_cross_tissue.py  08g_cross_age.py  09_cross_species_validation.py  _08e_plots_baseline.py  _08e_plots_differential.py  _08e_plots_pathway.py  _08e_plots_perdonor.py  _08e_plots_stats.py  _utils.py  audit_08c.py  build_go_relevance.py  build_placenta_reference.py  build_yaml.py  (+53 more)
